# hypo

./: .gitmodules  CMakeLists.txt  README.md  install_deps.sh
include/: Alignment.hpp  Contig.hpp  Filter.hpp  Hypo.hpp  MinimizerDeque.hpp  PackedSeq.hpp  Window.hpp  globalDefs.hpp  kseq.h
src/: Alignment.cpp  Contig.cpp  Hypo.cpp  PackedSeq.cpp  Window.cpp  main.cpp
